Fri Jan 03 21:56:51 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Wed Jan 01 03:53:47 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/Makefile.am: Fix handling of MAINTAINER_NO_DOCS.

Mon Dec 30 05:38:00 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/postingsource.rst: Clarify a couple of points (reported by
	  "vHanda" on IRC).

Mon Dec 30 05:36:50 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_unicode.cc: Add regression test for incorrect results
	  from Unicode::tolower() for 4 code points (U+01C5, U+01C8, U+01CB,
	  U+01F2) with Xapian 1.2.16 and earlier.

Mon Dec 30 05:08:23 GMT 2013  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* HACKING: Note that Tcl is now needed to generate
	  unicode/unicode-data.cc.
	* tests/api_unicode.cc: Add a tests that additions and changes in
	  Unicode > 5.2 aren't active.
	* unicode/Makefile.mk,unicode/uniParse.tcl: Adjust to not need a
	  symlink.  Give the generated file a new name, since the "tcl" prefix
	  doesn't make much sense here, and it avoids issues with
	  transitioning from a file in version control to one which is
	  generated.
	* unicode/: Add the source data file and scripts to generate
	  tclUniData.cc.

Tue Dec 24 22:40:04 GMT 2013  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Fix apitest to build when brass, chert or
	  flint are disabled.

Tue Dec 24 02:15:16 GMT 2013  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* tests/Makefile.am,tests/perftest/Makefile.mk: Actually use
	  @NO_INSTALL@.
	* configure.ac: Use -no-fast-install on platforms where -no-install
	  causes libtool to emit a warning.

Mon Dec 23 02:20:37 GMT 2013  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/enquire.h: Note that 1.2.17 is required for the
	  correct sense of the reverse parameter to Enquire methods
	  set_sort_by_relevance_then_value() and